Modernize BGPPeer
A slew of things:
- use local variable type inference
- do not access mpReach.getCNextHop() multiple times
- clean up prefixesToMpReach() builder flow
- use stream.anyMatch() instead of filter().findAny()
- use expressions to initialize locals
- use expressions to extract state provider parts
- use require{Afi,Safi} instead of get{Afi,Safi}
- use ImmutableSet.toImmutableSet() instead of explicit copy
- use one filter() to extract-and-check afi flags and forwarding state

Change-Id: Ifa257b9ce50208227787ecbfd1b9ada7641f35f4
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>