@@ -33,7 +33,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
@@ -57,7 +56,6 @@ import org.opendaylight.protocol.bgp.rib.impl.state.BGPSessionStateProvider;
 import org.opendaylight.protocol.bgp.rib.spi.BGPSession;
 import org.opendaylight.protocol.bgp.rib.spi.BGPSessionListener;
 import org.opendaylight.protocol.bgp.rib.spi.BGPTerminationReason;
-import org.opendaylight.protocol.bgp.rib.spi.RIBSupport;
 import org.opendaylight.protocol.bgp.rib.spi.RouterIds;
 import org.opendaylight.protocol.bgp.rib.spi.state.BGPSessionState;
 import org.opendaylight.protocol.bgp.rib.spi.state.BGPTimersState;
@@ -71,12 +69,9 @@ import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.inet
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.inet.rev180329.ipv4.prefixes.destination.ipv4.Ipv4PrefixesBuilder;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.inet.rev180329.update.attributes.mp.reach.nlri.advertized.routes.destination.type.DestinationIpv4CaseBuilder;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.message.rev200120.Update;
-import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.message.rev200120.open.message.BgpParameters;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.message.rev200120.path.attributes.Attributes;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.message.rev200120.path.attributes.AttributesBuilder;
-import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.message.rev200120.update.message.Nlri;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.multiprotocol.rev180329.BgpAddPathTableType;
-import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.multiprotocol.rev180329.BgpTableType;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.multiprotocol.rev180329.RouteRefresh;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.multiprotocol.rev180329.SendReceive;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.multiprotocol.rev180329.attributes.reach.MpReachNlri;
@@ -85,7 +80,6 @@ import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.mult
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.multiprotocol.rev180329.attributes.unreach.MpUnreachNlri;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.multiprotocol.rev180329.attributes.unreach.MpUnreachNlriBuilder;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.multiprotocol.rev180329.attributes.unreach.mp.unreach.nlri.WithdrawnRoutesBuilder;
-import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.multiprotocol.rev180329.mp.capabilities.GracefulRestartCapability;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.multiprotocol.rev180329.mp.capabilities.add.path.capability.AddressFamilies;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.peer.rpc.rev180329.ResetSession;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.peer.rpc.rev180329.RestartGracefully;
@@ -122,7 +116,7 @@ public final class BGPPeer extends AbstractPeer implements BGPSessionListener {
     //        hints at an obvious layer of indirection. Yeah, yeah, we can always add one of those, but the point
     //        is that this class is a mutable meeting point, whereas the behaviour has captured invariants.
     private final LoadingCache<NodeIdentifierWithPredicates, YangInstanceIdentifier> tablesIId =
-        CacheBuilder.newBuilder().build(new CacheLoader<NodeIdentifierWithPredicates, YangInstanceIdentifier>() {
+        CacheBuilder.newBuilder().build(new CacheLoader<>() {
             @Override
             public YangInstanceIdentifier load(final NodeIdentifierWithPredicates key) {
                 return peerRibOutIId.node(TABLES_NID).node(key).toOptimized();
@@ -188,10 +182,11 @@ public final class BGPPeer extends AbstractPeer implements BGPSessionListener {
     }
 
     private static Attributes nextHopToAttribute(final Attributes attrs, final MpReachNlri mpReach) {
-        if (attrs.getCNextHop() == null && mpReach.getCNextHop() != null) {
-            final AttributesBuilder attributesBuilder = new AttributesBuilder(attrs);
-            attributesBuilder.setCNextHop(mpReach.getCNextHop());
-            return attributesBuilder.build();
+        if (attrs.getCNextHop() == null) {
+            final var reachNextHop = mpReach.getCNextHop();
+            if (reachNextHop != null) {
+                return new AttributesBuilder(attrs).setCNextHop(reachNextHop).build();
+            }
         }
         return attrs;
     }
@@ -203,21 +198,27 @@ public final class BGPPeer extends AbstractPeer implements BGPSessionListener {
      * @return MpReachNlri with prefixes from the nlri field
      */
     private static MpReachNlri prefixesToMpReach(final Update message) {
-        final List<Ipv4Prefixes> prefixes = message.getNlri().stream()
-                .map(n -> new Ipv4PrefixesBuilder().setPrefix(n.getPrefix()).setPathId(n.getPathId()).build())
-                .collect(Collectors.toList());
-        final MpReachNlriBuilder b = new MpReachNlriBuilder()
+        final var builder = new MpReachNlriBuilder();
+        final var attrs = message.getAttributes();
+        if (attrs != null) {
+            builder.setCNextHop(attrs.getCNextHop());
+        }
+        return builder
             .setAfi(Ipv4AddressFamily.VALUE)
             .setSafi(UnicastSubsequentAddressFamily.VALUE)
             .setAdvertizedRoutes(new AdvertizedRoutesBuilder()
                 .setDestinationType(new DestinationIpv4CaseBuilder()
-                    .setDestinationIpv4(new DestinationIpv4Builder().setIpv4Prefixes(prefixes).build())
+                    .setDestinationIpv4(new DestinationIpv4Builder()
+                        .setIpv4Prefixes(message.nonnullNlri().stream()
+                            .map(nlri -> new Ipv4PrefixesBuilder()
+                                .setPrefix(nlri.getPrefix())
+                                .setPathId(nlri.getPathId())
+                                .build())
+                            .collect(Collectors.toList()))
+                        .build())
                     .build())
-                .build());
-        if (message.getAttributes() != null) {
-            b.setCNextHop(message.getAttributes().getCNextHop());
-        }
-        return b.build();
+                .build())
+            .build();
     }
 
     /**
@@ -228,24 +229,33 @@ public final class BGPPeer extends AbstractPeer implements BGPSessionListener {
      * @return MpUnreachNlri with prefixes from the withdrawn routes field
      */
     private static MpUnreachNlri prefixesToMpUnreach(final Update message, final boolean isAnyNlriAnnounced) {
-        final List<Ipv4Prefixes> prefixes = new ArrayList<>();
-        message.getWithdrawnRoutes().forEach(w -> {
+        final var prefixes = new ArrayList<Ipv4Prefixes>();
+        final var withdrawnRoutes = message.getWithdrawnRoutes();
+        if (withdrawnRoutes != null) {
+            for (var withdrawnRoute : withdrawnRoutes) {
+                final var nlriAnounced = isAnyNlriAnnounced && message.nonnullNlri().stream()
+                    .anyMatch(nlri -> Objects.equals(nlri.getPrefix(), withdrawnRoute.getPrefix())
+                        && Objects.equals(nlri.getPathId(), withdrawnRoute.getPathId()));
+                if (!nlriAnounced) {
+                    prefixes.add(new Ipv4PrefixesBuilder()
+                        .setPrefix(withdrawnRoute.getPrefix())
+                        .setPathId(withdrawnRoute.getPathId())
+                        .build());
+                }
+            }
+        }
 
-            Optional<Nlri> nlriAnounced = Optional.empty();
-            if (isAnyNlriAnnounced) {
-                nlriAnounced = message.getNlri().stream().filter(n -> Objects.equals(n.getPrefix(), w.getPrefix())
-                        && Objects.equals(n.getPathId(), w.getPathId()))
-                        .findAny();
-            }
-            if (!nlriAnounced.isPresent()) {
-                prefixes.add(new Ipv4PrefixesBuilder().setPrefix(w.getPrefix()).setPathId(w.getPathId()).build());
-            }
-        });
-        return new MpUnreachNlriBuilder().setAfi(Ipv4AddressFamily.VALUE).setSafi(UnicastSubsequentAddressFamily.VALUE)
-                .setWithdrawnRoutes(new WithdrawnRoutesBuilder().setDestinationType(new org.opendaylight.yang.gen.v1
-                        .urn.opendaylight.params.xml.ns.yang.bgp.inet.rev180329.update.attributes.mp.unreach.nlri
-                        .withdrawn.routes.destination.type.DestinationIpv4CaseBuilder().setDestinationIpv4(
-                            new DestinationIpv4Builder().setIpv4Prefixes(prefixes).build()).build()).build()).build();
+        return new MpUnreachNlriBuilder()
+            .setAfi(Ipv4AddressFamily.VALUE)
+            .setSafi(UnicastSubsequentAddressFamily.VALUE)
+            .setWithdrawnRoutes(new WithdrawnRoutesBuilder()
+                .setDestinationType(new org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.inet
+                    .rev180329.update.attributes.mp.unreach.nlri.withdrawn.routes.destination.type
+                    .DestinationIpv4CaseBuilder()
+                    .setDestinationIpv4(new DestinationIpv4Builder().setIpv4Prefixes(prefixes).build())
+                    .build())
+                .build())
+            .build();
     }
 
     private static ImmutableMap<TablesKey, SendReceive> mapTableTypesFamilies(
@@ -262,7 +272,7 @@ public final class BGPPeer extends AbstractPeer implements BGPSessionListener {
 
     @Override
     public synchronized FluentFuture<? extends CommitInfo> close() {
-        final FluentFuture<? extends CommitInfo> future = releaseConnection(true);
+        final var future = releaseConnection(true);
         closeDomChain();
         setActive(false);
         return future;
@@ -281,9 +291,9 @@ public final class BGPPeer extends AbstractPeer implements BGPSessionListener {
         final var rrAfi = message.getAfi();
         final var rrSafi = message.getSafi();
 
-        final TablesKey key = new TablesKey(rrAfi, rrSafi);
+        final var key = new TablesKey(rrAfi, rrSafi);
         synchronized (this) {
-            final AdjRibOutListener listener = adjRibOutListenerSet.remove(key);
+            final var listener = adjRibOutListenerSet.remove(key);
             if (listener != null) {
                 listener.close();
                 createAdjRibOutListener(key, listener.isMpSupported());
@@ -300,11 +310,10 @@ public final class BGPPeer extends AbstractPeer implements BGPSessionListener {
      */
     private void checkMandatoryAttributesPresence(final Update message) throws BGPDocumentedException {
         if (MessageUtil.isAnyNlriPresent(message)) {
-            final Attributes attrs = message.getAttributes();
+            final var attrs = message.getAttributes();
             if (getRole() == PeerRole.Ibgp && (attrs == null || attrs.getLocalPref() == null)) {
                 throw new BGPDocumentedException(BGPError.MANDATORY_ATTR_MISSING_MSG + "LOCAL_PREF",
-                        BGPError.WELL_KNOWN_ATTR_MISSING,
-                        new byte[]{LocalPreferenceAttributeParser.TYPE});
+                        BGPError.WELL_KNOWN_ATTR_MISSING, new byte[] { LocalPreferenceAttributeParser.TYPE });
             }
         }
     }
@@ -319,27 +328,19 @@ public final class BGPPeer extends AbstractPeer implements BGPSessionListener {
         checkMandatoryAttributesPresence(message);
 
         // update AdjRibs
-        final Attributes attrs = message.getAttributes();
-        MpReachNlri mpReach;
+        final var attrs = message.getAttributes();
         final boolean isAnyNlriAnnounced = message.getNlri() != null;
-        if (isAnyNlriAnnounced) {
-            mpReach = prefixesToMpReach(message);
-        } else {
-            mpReach = MessageUtil.getMpReachNlri(attrs);
-        }
+        final var mpReach = isAnyNlriAnnounced ? prefixesToMpReach(message) : MessageUtil.getMpReachNlri(attrs);
         if (mpReach != null) {
             ribWriter.updateRoutes(mpReach, nextHopToAttribute(attrs, mpReach));
         }
-        final MpUnreachNlri mpUnreach;
-        if (message.getWithdrawnRoutes() != null) {
-            mpUnreach = prefixesToMpUnreach(message, isAnyNlriAnnounced);
-        } else {
-            mpUnreach = MessageUtil.getMpUnreachNlri(attrs);
-        }
+
+        final var mpUnreach = message.getWithdrawnRoutes() != null ? prefixesToMpUnreach(message, isAnyNlriAnnounced)
+            : MessageUtil.getMpUnreachNlri(attrs);
         final boolean endOfRib = BgpPeerUtil.isEndOfRib(message);
         if (mpUnreach != null) {
             if (endOfRib) {
-                final TablesKey tablesKey = new TablesKey(mpUnreach.getAfi(), mpUnreach.getSafi());
+                final var tablesKey = new TablesKey(mpUnreach.requireAfi(), mpUnreach.requireSafi());
                 ribWriter.removeStaleRoutes(tablesKey);
                 missingEOT.remove(tablesKey);
                 handleGracefulEndOfRib();
@@ -360,7 +361,7 @@ public final class BGPPeer extends AbstractPeer implements BGPSessionListener {
                 createEffRibInWriter();
                 effRibInWriter.init();
                 registerPrefixesCounters(effRibInWriter, effRibInWriter);
-                for (final TablesKey key : getAfiSafisAdvertized()) {
+                for (var key : getAfiSafisAdvertized()) {
                     createAdjRibOutListener(key, true);
                 }
                 setLocalRestartingState(false);
@@ -376,7 +377,7 @@ public final class BGPPeer extends AbstractPeer implements BGPSessionListener {
 
         final var chain = rib.createPeerDOMChain();
         ribOutChain = chain;
-        chain.addCallback(new FutureCallback<Empty>() {
+        chain.addCallback(new FutureCallback<>() {
             @Override
             public void onSuccess(final Empty result) {
                 LOG.debug("RibOut transaction chain {} successful.", chain);
@@ -391,18 +392,19 @@ public final class BGPPeer extends AbstractPeer implements BGPSessionListener {
         if (currentSession instanceof BGPSessionStateProvider stateProvider) {
             stateProvider.registerMessagesCounter(this);
         }
-        final GracefulRestartCapability advertisedGracefulRestartCapability =
-                session.getAdvertisedGracefulRestartCapability();
+        final var advertisedGracefulRestartCapability = session.getAdvertisedGracefulRestartCapability();
         final var advertisedTables = advertisedGracefulRestartCapability.getTables();
         final var advertisedLLTables = session.getAdvertisedLlGracefulRestartCapability().getTables();
 
-        final List<AddressFamilies> addPathTablesType = session.getAdvertisedAddPathTableTypes();
-        final Set<BgpTableType> advertizedTableTypes = session.getAdvertisedTableTypes();
-        LOG.info("Session with peer {} went up with tables {} and Add Path tables {}", getName(),
-                advertizedTableTypes, addPathTablesType);
-        final Set<TablesKey> setTables = advertizedTableTypes.stream().map(t -> new TablesKey(t.getAfi(), t.getSafi()))
-                .collect(Collectors.toSet());
-        tables = ImmutableSet.copyOf(setTables);
+        final var addPathTablesType = session.getAdvertisedAddPathTableTypes();
+        final var advertizedTableTypes = session.getAdvertisedTableTypes();
+        LOG.info("Session with peer {} went up with tables {} and Add Path tables {}", getName(), advertizedTableTypes,
+            addPathTablesType);
+
+        final var newTables = advertizedTableTypes.stream()
+            .map(table -> new TablesKey(table.requireAfi(), table.requireSafi()))
+            .collect(ImmutableSet.toImmutableSet());
+        tables = newTables;
 
         addPathTableMaps = mapTableTypesFamilies(addPathTablesType);
         final boolean restartingLocally = isLocalRestarting();
@@ -418,8 +420,7 @@ public final class BGPPeer extends AbstractPeer implements BGPSessionListener {
             registerPrefixesCounters(effRibInWriter, effRibInWriter);
 
             effRibInWriter.init();
-            ribWriter = ribWriter.transform(peerId, peerPath, rib.getRibSupportContext(),
-                    tables, addPathTableMaps);
+            ribWriter = ribWriter.transform(peerId, peerPath, rib.getRibSupportContext(), tables, addPathTableMaps);
 
             if (rpcRegistry != null) {
                 final var bgpPeerHandler = new BgpPeerRpc(this, session, tables);
@@ -433,16 +434,14 @@ public final class BGPPeer extends AbstractPeer implements BGPSessionListener {
                         .build()));
             }
         } else {
-            final Set<TablesKey> forwardingTables;
-            if (advertisedTables == null) {
-                forwardingTables = Collections.emptySet();
-            } else {
-                forwardingTables = advertisedTables.values().stream()
-                        .filter(table -> table.getAfiFlags() != null)
-                        .filter(table -> table.getAfiFlags().getForwardingState())
-                        .map(table -> new TablesKey(table.getAfi(), table.getSafi()))
-                        .collect(Collectors.toSet());
-            }
+            final var forwardingTables = advertisedTables == null ? Collections.<TablesKey>emptySet()
+                : advertisedTables.values().stream()
+                    .filter(table -> {
+                        final var afiFlags = table.getAfiFlags();
+                        return afiFlags != null && afiFlags.getForwardingState();
+                    })
+                    .map(table -> new TablesKey(table.getAfi(), table.getSafi()))
+                    .collect(Collectors.toSet());
             ribWriter.clearTables(Sets.difference(tables, forwardingTables));
             if (restartingLocally) {
                 effRibInWriter.close();
@@ -451,12 +450,9 @@ public final class BGPPeer extends AbstractPeer implements BGPSessionListener {
                 missingEOT.addAll(tables);
             }
         }
-        if (advertisedTables == null || advertisedTables.isEmpty()) {
-            setAdvertizedGracefulRestartTableTypes(Collections.emptyList());
-        } else {
-            setAdvertizedGracefulRestartTableTypes(advertisedTables.values().stream()
-                    .map(t -> new TablesKey(t.getAfi(), t.getSafi())).collect(Collectors.toList()));
-        }
+        setAdvertizedGracefulRestartTableTypes(advertisedTables == null ? List.of() : advertisedTables.values().stream()
+            .map(table -> new TablesKey(table.getAfi(), table.getSafi()))
+            .collect(Collectors.toList()));
         setAfiSafiGracefulRestartState(advertisedGracefulRestartCapability.getRestartTime().toJava(), false,
             restartingLocally);
 
@@ -480,10 +476,10 @@ public final class BGPPeer extends AbstractPeer implements BGPSessionListener {
         }
 
         if (!restartingLocally) {
-            if (!setTables.contains(IPV4_UCAST_TABLE_KEY)) {
+            if (!newTables.contains(IPV4_UCAST_TABLE_KEY)) {
                 createAdjRibOutListener(IPV4_UCAST_TABLE_KEY, false);
             }
-            for (final TablesKey key : getAfiSafisAdvertized()) {
+            for (var key : getAfiSafisAdvertized()) {
                 createAdjRibOutListener(key, true);
             }
         }
@@ -510,9 +506,7 @@ public final class BGPPeer extends AbstractPeer implements BGPSessionListener {
         final var tx = ribOutChain.newWriteOnlyTransaction();
         tx.merge(OPERATIONAL, peerRibOutIId, ImmutableNodes.newContainerBuilder()
             .withNodeIdentifier(ADJRIBOUT_NID)
-            .withChild(ImmutableNodes.newSystemMapBuilder()
-                .withNodeIdentifier(TABLES_NID)
-                .build())
+            .withChild(ImmutableNodes.newSystemMapBuilder().withNodeIdentifier(TABLES_NID).build())
             .build());
         // Postpone registration until the containers exist in datastore
         tx.commit().addCallback(new FutureCallback<CommitInfo>() {
@@ -554,7 +548,7 @@ public final class BGPPeer extends AbstractPeer implements BGPSessionListener {
     @Holding("this")
     private void addBgp4Support() {
         if (!tables.contains(IPV4_UCAST_TABLE_KEY)) {
-            final HashSet<TablesKey> newSet = new HashSet<>(tables);
+            final var newSet = new HashSet<>(tables);
             newSet.add(IPV4_UCAST_TABLE_KEY);
             tables = ImmutableSet.copyOf(newSet);
         }
@@ -562,12 +556,12 @@ public final class BGPPeer extends AbstractPeer implements BGPSessionListener {
 
     @Holding("this")
     private void createAdjRibOutListener(final TablesKey key, final boolean mpSupport) {
-        final RIBSupport<?, ?> ribSupport = rib.getRibSupportContext().getRIBSupport(key);
+        final var ribSupport = rib.getRibSupportContext().getRIBSupport(key);
 
         // not particularly nice
         if (ribSupport != null && currentSession instanceof BGPSessionImpl bgpSession) {
-            final AdjRibOutListener adjRibOut = AdjRibOutListener.create(peerId, rib.getYangRibId(),
-                rib.getCodecsRegistry(), ribSupport, rib.getService(), bgpSession.getLimiter(), mpSupport);
+            final var adjRibOut = AdjRibOutListener.create(peerId, rib.getYangRibId(), rib.getCodecsRegistry(),
+                ribSupport, rib.getService(), bgpSession.getLimiter(), mpSupport);
             adjRibOutListenerSet.put(key, adjRibOut);
             registerPrefixesSentCounter(key, adjRibOut);
         }
@@ -615,7 +609,7 @@ public final class BGPPeer extends AbstractPeer implements BGPSessionListener {
         //        transitioned way before this method is called. This really begs to be an abstract base class with
         //        a 'clearTables' or similar callout
         if (isRestartingGracefully()) {
-            final Set<TablesKey> gracefulTables = getGracefulTables();
+            final var gracefulTables = getGracefulTables();
             ribWriter.storeStaleRoutes(gracefulTables);
             future = ribWriter.clearTables(Sets.difference(tables, gracefulTables));
             if (isPeerRestarting()) {
@@ -751,26 +745,20 @@ public final class BGPPeer extends AbstractPeer implements BGPSessionListener {
 
     @Override
     public synchronized BGPSessionState getBGPSessionState() {
-        if (currentSession instanceof BGPSessionStateProvider stateProvider) {
-            return stateProvider.getBGPSessionState();
-        }
-        return null;
+        return currentSession instanceof BGPSessionStateProvider stateProvider ? stateProvider.getBGPSessionState()
+            : null;
     }
 
     @Override
     public synchronized BGPTimersState getBGPTimersState() {
-        if (currentSession instanceof BGPSessionStateProvider stateProvider) {
-            return stateProvider.getBGPTimersState();
-        }
-        return null;
+        return currentSession instanceof BGPSessionStateProvider stateProvider ? stateProvider.getBGPTimersState()
+            : null;
     }
 
     @Override
     public synchronized BGPTransportState getBGPTransportState() {
-        if (currentSession instanceof BGPSessionStateProvider stateProvider) {
-            return stateProvider.getBGPTransportState();
-        }
-        return null;
+        return currentSession instanceof BGPSessionStateProvider stateProvider ? stateProvider.getBGPTransportState()
+            : null;
     }
 
     @Override
@@ -780,11 +768,11 @@ public final class BGPPeer extends AbstractPeer implements BGPSessionListener {
 
     @Override
     public synchronized ListenableFuture<?> restartGracefully(final long selectionDeferralTimerSeconds) {
-        final Set<TablesKey> tablesToPreserve = getGracefulTables();
+        final var tablesToPreserve = getGracefulTables();
         if (tablesToPreserve == null || tablesToPreserve.isEmpty()) {
             LOG.info("Peer {} is not capable of graceful restart or have no matching graceful tables.", peerId);
-            return Futures.immediateFailedFuture(new UnsupportedOperationException(
-                    "Peer is not capable of graceful restart"));
+            return Futures.immediateFailedFuture(
+                new UnsupportedOperationException("Peer is not capable of graceful restart"));
         }
         setGracefulPreferences(true, tablesToPreserve);
         currentSelectionDeferralTimerSeconds = selectionDeferralTimerSeconds;
@@ -799,22 +787,20 @@ public final class BGPPeer extends AbstractPeer implements BGPSessionListener {
 
     private synchronized void setGracefulPreferences(final boolean localRestarting,
                                                      final Set<TablesKey> preservedTables) {
-        final Set<TablesKey> gracefulTables = tables.stream()
+        final var gracefulTables = tables.stream()
                 .filter(this::isGracefulRestartAdvertized)
                 .collect(Collectors.toSet());
-        final BgpParameters bgpParameters = GracefulRestartUtil.getGracefulBgpParameters(
+        final var bgpParameters = GracefulRestartUtil.getGracefulBgpParameters(
                 bean.getBgpFixedCapabilities(), gracefulTables, preservedTables,
                 bean.getGracefulRestartTimer(), localRestarting, Map.of(), unused -> false);
-        final BGPSessionPreferences oldPrefs = rib.getDispatcher().getBGPPeerRegistry()
-                .getPeerPreferences(getNeighborAddress());
-        final BGPSessionPreferences newPrefs = new BGPSessionPreferences(
+        final var oldPrefs = rib.getDispatcher().getBGPPeerRegistry().getPeerPreferences(getNeighborAddress());
+        final var newPrefs = new BGPSessionPreferences(
                 oldPrefs.getMyAs(),
                 oldPrefs.getHoldTime(),
                 oldPrefs.getBgpId(),
                 oldPrefs.getExpectedRemoteAs(),
                 Collections.singletonList(bgpParameters),
                 oldPrefs.getMd5Password());
-        rib.getDispatcher().getBGPPeerRegistry()
-                .updatePeerPreferences(getNeighborAddress(), newPrefs);
+        rib.getDispatcher().getBGPPeerRegistry().updatePeerPreferences(getNeighborAddress(), newPrefs);
     }
 }
